<resources>
    <string name="app_name">FileDB</string>
    <string name="hint">输入关键字</string>
    <string name="label_fileName">File Name: %1$s</string>
    <string name="label_fileExtension">File Extension: %1$s</string>
    <string name="label_md5">MD5: %1$s</string>
    <string name="label_position">Position: %1$s</string>
    <string name="label_length">Length: %1$s</string>
    <string name="label_size">Size: %1$s</string>
    <string name="label_keyword">Keyword: %1$s</string>
    <string name="label_url">URL: %1$s</string>
</resources>
