<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_fileName"/>

    <TextView
        android:id="@+id/tv_file_extension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_fileExtension"/>

    <TextView
        android:id="@+id/tv_md5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_md5"/>

    <TextView
        android:id="@+id/tv_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_position"/>

    <TextView
        android:id="@+id/tv_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_length"/>

    <TextView
        android:id="@+id/tv_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_size"/>

    <TextView
        android:id="@+id/tv_keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_keyword"/>

    <TextView
        android:id="@+id/tv_url"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/label_url"
        android:visibility="invisible" />
</LinearLayout>